Plugin Name: PopUp Pro
Author: Barry (Incsub), Marko Miljus (Incsub), Philipp Stracker (Incsub)

Change Log:
----------------------------------------------------------------------

4.7.0
----------------------------------------------------------------------
- Add Behavior option: Form submit behavior
- Add new meta box: Custom CSS for individual PopUps
- Fix an issue where the PopUp closes when Gravity Forms is submitted
- Fix the on-URL rules in Ajax loading methods
- Fix the Ajax loading methods when Strict-Mime-Check is enabled

4.6.1.5
----------------------------------------------------------------------
- Fix error on servers that run older php version than 5.3

4.6.1.4
----------------------------------------------------------------------
- New: Not-From-Referrer rule
- Better: Improved handling of forms inside PopUps
- Better: Ajax calls improved to prevent security errors by iThemes, etc.

4.6.1.3
----------------------------------------------------------------------
- New: Allow page to be scrolled while PopUp is open.
- Fix: Prevent PopUps from staying open after submitting a form to external URL.
- Fix: PopUps without content can be displayed now.

4.6.1.2
----------------------------------------------------------------------
- New: Two new WordPress filters allow custom positioning and styling of PopUps.
- Fix: Correctly display Meta-boxes of other plugins in the popup-editor.
- Fix: Plugins that use custom URL rewriting are working now (e.g. NextGen Gallery)
- Fix: PopUps can be edited even on servers with memcache/similar caching extensions.
- Fix: Resolve "Strict Standards" notes in PHP 5.4
- Fix: Rule "Not internal link" now works correctly when opening page directly.
- Fix: Rule "Specific Referrer" handles empty referrers correctly.
- Better: Forms inside PopUps will only refresh the PopUp and not reload the page.
- Better: Detection of theme compatibility for loading method "Page Footer" improved.

4.6.1.1