@@ -6,8 +6,10 @@ Change Log:
 
 4.7.0
 ----------------------------------------------------------------------
+- Add PopUp Animations
 - Add Behavior option: Form submit behavior
 - Add new meta box: Custom CSS for individual PopUps
+- Add validation of PopUp shortcodes for the current loading method
 - Fix an issue where the PopUp closes when Gravity Forms is submitted
 - Fix the on-URL rules in Ajax loading methods
 - Fix the Ajax loading methods when Strict-Mime-Check is enabled
